Fixed git log to be non configurable for now.